--- a/functions/package.json
+++ b/functions/package.json
@@ -11,8 +11,11 @@
   "dependencies": {
     "ejs": "^2.6.1",
     "express": "^4.16.4",
-    "firebase-admin": "~6.0.0",
-    "firebase-functions": "^2.1.0"
+    "firebase-admin": "^8.2.0",
+    "firebase-functions": "^3.0.2"
+  },
+  "engines": {
+    "node": "10"
   },
   "private": true
 }
